[package]
name = "lightrdf"
version = "0.1.1"
authors = ["Kentaro Ozeki <32771324+ozekik@users.noreply.github.com>"]
description = "A fast and lightweight Python RDF parser which wraps bindings to Rust's Rio using PyO3"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ozekik/lightrdf"
homepage = "https://github.com/ozekik/lightrdf"
readme = "README.md"

[lib]
name = "lightrdf"
crate-type = ["cdylib"]

[dependencies]
rio_api = "0.4.0"
rio_turtle = "0.4.0"
rio_xml = "0.4.0"
signal-hook = "0.1.13"

[dependencies.pyo3]
# version = "0.9.0-alpha.1"
git = "https://github.com/PyO3/pyo3.git"
rev = "3f030d46"
features = ["extension-module"]

[package.metadata.maturin]
maintainer = "Kentaro Ozeki"
maintainer-email = "kentaro.ozeki+dev@gmail.com"
project-url = ["https://github.com/ozekik/lightrdf"]
