[tool.poetry]
name = "lightrdf"
version = "0.2.2"
description = "A fast and lightweight Python RDF parser which wraps bindings to Rust's Rio using PyO3"
authors = ["Kentaro Ozeki <kentaro.ozeki+dev@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ozekik/lightrdf"
repository = "https://github.com/ozekik/lightrdf"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
tox = "^3.25.1"
maturin = "^0.13.2"
tox-gh-actions = "^2.9.1"
pytest = "^7.1.2"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
